load("@local_bazel_buildframe//:copts.bzl", "GLOBAL_DEFAULT_COPTS", "GLOBAL_DEFAULT_LINK_OPTS")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(
    default_visibility = ["//visibility:private"],
)

cc_library(
    name = "radix_tree_demo_lib",
    srcs = [
        "radix_tree_demo.cc",
        "radix_tree_demo.h",
    ],
    hdrs = [
        "radix_tree_demo.h",
    ],
    copts = GLOBAL_DEFAULT_COPTS,
    includes = [
        ".",
    ],
    linkopts = [],
    visibility = ["//visibility:public"],
    deps = [
        "//src/include:inner_include",
        "@com_glog//:glog",
    ],
)

cc_binary(
    name = "radix_tree_demo",
    srcs = [
        "main.cc",
    ],
    copts = GLOBAL_DEFAULT_COPTS,
    linkopts = GLOBAL_DEFAULT_LINK_OPTS,
    deps = [
        ":radix_tree_demo_lib",
    ],
)
